--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
             <th>Godzine Mszy Świętej</th>
             <th>Intencja</th>
             <th>Celebrans</th>
+            <th>Intencję przyjął</th>
         </tr>
         </thead>
         <tbody>
@@ -25,6 +26,7 @@
             <td th:text="${ourIntention.getTimeOfMass()}"/>
             <td th:text="${ourIntention.getDescriptionOfIntention()}"/>
             <td th:text="${ourIntention.getWhichPriest()}"/>
+            <td th:text="${ourIntention.getWhoAddIntention().toString()}"/>
         </tr>
         </tbody>
     </table>
@@ -51,6 +53,22 @@
                 <option th:each="priest : ${whichPriest}"
                         th:value="${priest.id}"
                         th:text="${priest.firstName} + ' ' +${priest.lastName}"></option>
+            </select>
+        </div>
+        <div class="form-group col-lg-3">
+            <label for="intentionMass">Uwagi</label>
+            <input type="text" class="form-control" th:field="*{othersAttention}"  id="othersComments" placeholder="Wprowadź uwagi">
+        </div>
+        <div class="form-group col-lg-3">
+            <label for="intentionMass">Złożona ofiara</label>
+            <input type="text" class="form-control" th:field="*{payment}"  id="paymentIntention" placeholder="Wprowadź ofiarę">
+        </div>
+        <div class="form-group col-lg-3">
+            <label>Kto dodał intencję</label>
+            <select class="form-control" th:field="*{whoAddIntention}"  id="allChurchWorkers" name="allChurchWorkers">
+                <option th:each="worker : ${whoAddIntention}"
+                        th:value="${worker.id}"
+                        th:text="${worker.firstName} + ' ' +${worker.lastName}"></option>
             </select>
         </div>
         <div class="form-group col-lg-3">
