--- a/src/main/resources/templates/show-all-workers.html
+++ b/src/main/resources/templates/show-all-workers.html
@@ -9,6 +9,19 @@
     <title>Księga Intencji</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/}">Pokaż intencję</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{add-new-intention}">Dodaj intencję</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link 3</a>
+        </li>
+    </ul>
+</nav>
 <div class="container">
     <table class="table table-hover">
         <thead>
