{IB-06} poprawki słowne

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         <thead>
         <tr>
             <th>Data Mszy Świętej</th>
-            <th>Godzine Mszy Świętej</th>
+            <th>Godzina Mszy Świętej</th>
             <th>Intencja</th>
             <th>Celebrans</th>
             <th>Intencję przyjął</th>
