--- a/src/main/resources/templates/add-new-intention.html
+++ b/src/main/resources/templates/add-new-intention.html
@@ -9,6 +9,19 @@
     <title>Dodaj intencję</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/}">Pokaż intencję</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{show-all-workers}">Pokaż pracowników</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link 3</a>
+        </li>
+    </ul>
+</nav>
 <div class="myForm">
     <form th:action="@{/add-intention}" method="post" th:object="${newIntention}">
         <div class="form-group col-lg-3">
