--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
             <a class="nav-link" th:href="@{show-all-workers}">Pokaż pracowników</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link 3</a>
+            <a class="nav-link" th:href="@{login}">Zaloguj się</a>
         </li>
     </ul>
 </nav>
