--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,6 +7,6 @@
 <body th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
 <h1 th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
 <p th:utext="${errorMessage}">Error java.lang.NullPointerException</p>
-<a href="login.html" th:href="@{login}">Back to Login Page</a>
+<a href="login.html" th:href="@{login}"></a>
 </body>
 </html>
