--- a/src/main/resources/templates/show-all-workers.html
+++ b/src/main/resources/templates/show-all-workers.html
@@ -17,9 +17,6 @@
         <li class="nav-item">
             <a class="nav-link" th:href="@{add-new-intention}">Dodaj intencję</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link 3</a>
-        </li>
     </ul>
 </nav>
 <div class="container">
@@ -28,7 +25,7 @@
         <tr>
             <th>Imię</th>
             <th>Nazwisko</th>
-            <th>Rola</th>
+            <th>Funkcja</th>
         </tr>
         </thead>
         <tbody>
