--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -42,8 +42,8 @@
 </div>
 
 <h1 class="police-tape police-tape--1">
-    &nbsp;&nbsp;&nbsp;&nbsp;Error: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Error: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Error: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Error: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Error: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Error: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Error: 403
+    &nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brak dostępu: 403
 </h1>
-<h1 class="police-tape police-tape--2">Forbidden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Forbidden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Forbidden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Forbidden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Forbidden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Forbidden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
+<h1 class="police-tape police-tape--2">Błąd&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Błąd&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Błąd&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Błąd&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Błąd&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Błąd&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
 </body>
 </html>
