--- a/src/main/resources/templates/add-new-intention.html
+++ b/src/main/resources/templates/add-new-intention.html
@@ -58,7 +58,7 @@
             </select>
         </div>
         <div class="form-group col-lg-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Dodaj intencję</button>
         </div>
     </form>
 </div>
