--- a/src/main/resources/templates/add-new-intention.html
+++ b/src/main/resources/templates/add-new-intention.html
@@ -23,7 +23,7 @@
     <form th:action="@{/add-intention}" method="post" th:object="${newIntention}">
         <div class="form-group col-lg-3">
             <label for="dateOfMass">Data Mszy Świętej:</label>
-            <input type="date" class="form-control" th:field="*{dateOfMass}" th:value="*{dateOfMass}" id="dateOfMass" placeholder="Wprowadź datę">
+            <input type="date" th:min="${now}" class="form-control" th:field="*{dateOfMass}" th:value="*{dateOfMass}" id="dateOfMass" placeholder="Wprowadź datę">
         </div>
         <div class="form-group col-lg-3">
             <label for="timeOfMass">Godzina Mszy Świętej: </label>
