{IB-16} Ukrycie informacji o przyjętej intencji + drobna kasmetologia

--- a/src/main/resources/templates/calendar-info.html
+++ b/src/main/resources/templates/calendar-info.html
@@ -50,7 +50,7 @@
         </tr>
 
 
-        <tr th:each="calendar : ${calendarApi}">
+        <tr style="background-color: #24a2d1;" th:each="calendar : ${calendarApi}">
             <td th:text="${calendar.getDate()}"/>
             <td>
                 <p th:each="celebrations : ${calendar.getCelebrations()}">
