--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
             <th>Godzina Mszy Świętej</th>
             <th>Intencja</th>
             <th>Celebrans</th>
-            <th>Intencję przyjął</th>
+            <th sec:authorize="isAuthenticated()">Intencję przyjął</th>
             <th sec:authorize="isAuthenticated()">Przyjęta ofiara (zł)</th>
         </tr>
         </thead>
@@ -50,7 +50,7 @@
             <td th:text="${ourIntention.getTimeOfMass()}"/>
             <td th:text="${ourIntention.getDescriptionOfIntention()}"/>
             <td th:text="${ourIntention.getWhichPriest()}"/>
-            <td th:text="${ourIntention.getWhoAddIntention().getFullName()}"/>
+            <td sec:authorize="isAuthenticated()" th:text="${ourIntention.getWhoAddIntention().getFullName()}"/>
             <td sec:authorize="isAuthenticated()" th:text="${ourIntention.getPayment()}"/>
         </tr>
         </tbody>
