--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
             <input type="password" class="form-control" id="password" name="password" placeholder="Hasło" required="required">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+            <button type="submit" class="btn btn-primary btn-block">Zaloguj!</button>
         </div>
     </form>
 </div>
