--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,9 @@
             <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{calendar-info}">Kalendarz liturgiczny</a>
         </li>
         <li class="nav-item">
+            <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{intention-generate}">Generuj intencję</a>
+        </li>
+        <li class="nav-item">
             <a sec:authorize="!isAuthenticated()" class="nav-link" th:href="@{login}">Zaloguj</a>
         </li>
         <li class="nav-item">
